todoapps/immich/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: ghcr.io/tensorchord/pgvecto-rs:pg14-v0.2.0
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d
          name: init-scripts
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
      volumes:
      - name: init-scripts
        configMap:
          name: postgres-init-scripts
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
